@@ -1,0 +1,14 @@
+<h1>愛情的多面體！Yena新單曲《Nemo Nemo》隱喻愛情的複雜情感</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qhdeut5PJWQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>Yena在發行了1月份的《Good Morning》後，八個月後帶來了她的第三張單曲專輯《Nemo Nemo》。這張專輯的名稱源自韓語中的“正方形”一詞，用於隱喻愛情的複雜情感。</p>
+<p>根據Yena的描述，每個人對愛情的定義或表達方式都不同，這張專輯使用正方形作為隱喻來表達這種感覺。同名主打歌《Nemo Nemo》是一首電子舞曲，歌詞充滿玩味和古怪的元素。</p>
+<p>當你陷入愛情時，會有美好的時刻，但也會互相傷害，感到沮喪，並露出尖銳的邊緣。這首歌通過將這些時刻與正方形的尖銳角落進行比較來表達。Yena表示，這張專輯的聲音靈感來自她過去喜歡聽的音樂，例如T-ara、After School和Orange Caramel等組合的歌曲。</p>
+<p>主打歌帶有懷舊的感覺，但以Yena的風格呈現。Block B成員兼製作人Zico參與了主打歌的歌詞創作。Yena回憶道，Zico迅速想出了機智的歌詞。</p>
+<p>對於Yena來說，享受當下的重要性是她一直強調的。她說：“當我站在舞台上時，最重要的是我應該感到快樂。觀眾可以感受到那種能量，所以我必須真正享受表演。”</p>
+<p>以下是Yena的音樂事業簡介：</p>
+<p><ul></p>
+  <li>2018年：通過Mnet的選秀節目《Produce 48》成為項目組合Iz*One的成員</li>  <li>2021年4月：Iz*One解散</li>  <li>2022年1月：推出首張個人迷你專輯《Smiley》，展開個人音樂事業</li><p></ul></p>
+
+<p>資料來源： Korea Herald</p>
